fantasyfootballnerd.com (archived on 2010-07-25)
{
  "alexa_rank": 103962,
  "analysis_subcorpus": true,
  "categories": "sports",
  "char_count": 8924,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.86,
  "homepage_snapshot_redirected_domain": "fantasyfootballnerd.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100914221156id_/http://www.fantasyfootballnerd.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100914221156id_/http%3A//fantasyfootballnerd.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "fantasyfootballnerd.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100725191631id_/http%3A//www.fantasyfootballnerd.com/privacy.php",
  "policy_title": "Fantasy Football Nerd - Privacy Policy",
  "policy_url": "fantasyfootballnerd.com/privacy.php",
  "sha1": "86f4b392b7d5b2ca7e9cf4d9ce60517d28f9770b",
  "simhash": 11089995396066912488,
  "simhash_updated": false,
  "site_hostname": "fantasyfootballnerd.com",
  "site_url": "http://fantasyfootballnerd.com",
  "smog": 15.56,
  "strict_updated": false,
  "timestamp": "20100725191631",
  "word_count": 1388,
  "year": 2010
}

--- a/f/fa/fan/fantasyfootballnerd.com.html
+++ b/f/fa/fan/fantasyfootballnerd.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fantasyfootballnerd.com privacy policy that was archived on 2010-05-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100505144344id_/http%3A//www.fantasyfootballnerd.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fantasyfootballnerd.com privacy policy that was archived on 2010-07-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100725191631id_/http%3A//www.fantasyfootballnerd.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -193,7 +193,7 @@ var random_number = a;
 <div align="center" style="padding-top:20px;">
 <script type="text/javascript">
 document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/fantasyfootballnerd.fsv/ros;sect=ros;fantasy=yes;game=no;tile=1;dcopt=ist;sz=728x90;ord=' + random_number + '?></scr' + 'ipt>');
-</script><script src="http://ad.doubleclick.net/adj/fantasyfootballnerd.fsv/ros;sect=ros;fantasy=yes;game=no;tile=1;dcopt=ist;sz=728x90;ord=6343348998?"></script>
+</script><script src="http://ad.doubleclick.net/adj/fantasyfootballnerd.fsv/ros;sect=ros;fantasy=yes;game=no;tile=1;dcopt=ist;sz=728x90;ord=6295151326?"></script>
 <noscript>
 <A HREF="http://ad.doubleclick.net/jump/fantasyfootballnerd.fsv/ros;sect=ros;fantasy=yes;game=no;tile=1;sz=728x90;ord='+random_number+'?" rel="nofollow">
 <IMG SRC="http://ad.doubleclick.net/ad/fantasyfootballnerd.fsv/ros;sect=ros;fantasy=yes;game=no;tile=1;sz=728x90;ord='+random_number+'?" border="0" height="90" width="728"></A>
@@ -203,7 +203,7 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/fantasyfootballne
 
 <div class="topDec"></div>
 
-	<div style="float:left;text-align:left;background: #EDEDED;">
+	<div style="float:left;text-align:left;background:#EDEDED;font-size:12px;padding:5px;">
 	About: <a href="/about.php">About the Nerd</a> | <a href="/nerdRank.php">NerdRank</a> | <a href="/contentProviders.php">Add your content to FFN</a> |  <a href="/blog/">Nerd Blog</a>
 	<br>
 	Features: <a href="/myDrafts.php">Draft Buddy</a> | <a href="/fantasyFootballBuddy.php">What is the Draft Buddy?</a> | <a href="/analyzer.php">Lineup Analyzer</a> | <a href="nflNews.php">NFL News</a>
@@ -212,10 +212,8 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/fantasyfootballne
 	<br>
 	FFN: <a href="/terms.php">Terms and Conditions</a> | <a href="/privacy.php">Privacy Policy</a> | <a href="/contactNerd.php">Contact Us</a>
 	<br>
-	Misc: <a href="http://www.weatherific.com/sports/nfl">NFL Weather Reports</a>
+	Misc: <a href="http://www.weatherific.com/sports/nfl" title="NFL Weather">NFL Weather</a>
 	<br>
-	Copyright 2010. All rights reserved.<br>
-	Fantasy Football Nerd is not affiliated with the NFL or the NFL Players Association
 	</div>
 	<div style="float:right;">
 	<a href="http://www.facebook.com/pages/Fantasy-Football-Nerd/114376835267313" target="_blank" rel="nofollow">
@@ -223,6 +221,9 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/fantasyfootballne
 	</a>
 	</div>
 	<div class="clear"></div>
+
+	Copyright 2010. All rights reserved.<br>
+	Fantasy Football Nerd is not affiliated with the NFL or the NFL Players Association
 
 
 <script type="text/javascript">
