--- a/c/co/coo/coolrom.com.html
+++ b/c/co/coo/coolrom.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coolrom.com privacy policy that was archived on 2010-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100625155309id_/http%3A//www.coolrom.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coolrom.com privacy policy that was archived on 2010-07-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100726040739id_/http%3A//www.coolrom.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>CoolROM.com - Privacy Policy</title>
@@ -14,6 +14,7 @@
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 <meta name="verify-v1" content="c7LPqhRk0alGf69f97N0JiMLIbHwkZKvfKkW5zOecuo=">
 
+<link rel="shortcut icon" type="image/x-icon" href="http://www.coolrom.com/favicon.ico">
 <link rel="stylesheet" href="http://www.coolrom.com/style.css" type="text/css">
 
 <style type="text/css">
@@ -246,7 +247,7 @@ rnum=Math.round(Math.random() * 100000);
 ts=String.fromCharCode(60);
 if (window.self != window.top) {nf=''} else {nf='NF/'};
 document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad13103b.cgi/v=2.2S/sz=468x60A|728x90A/'+rnum+'/NI/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad13103b.cgi/v=2.2S/sz=468x60A|728x90A/60277/NI/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad13103b-map.cgi/ns/v=2.2S/sz=468x60A|728x90A/" target="_top">
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad13103b.cgi/v=2.2S/sz=468x60A|728x90A/60635/NI/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad13103b-map.cgi/ns/v=2.2S/sz=468x60A|728x90A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/ad13103b.cgi/ns/v=2.2S/sz=468x60A|728x90A/" border="0" alt="Click Here" /></a>
 </noscript>
 <!-- END BURST CODE -->
@@ -324,7 +325,7 @@ if ((ver == "Microsoft Internet Explorer")&&(num >= 4)) {
 <tr><td colspan="2" bgcolor="#5685c4" width="100%" height="1">
 
 <table width="100%">
-<tbody><tr><td width="560" class="nav">
+<tbody><tr><td width="550" class="nav">
 
 &nbsp;<a href="http://www.coolrom.com"><b>Home</b></a> |
 <a href="http://www.coolrom.com/forums"><b>Forums</b></a> |
@@ -411,7 +412,7 @@ rnum=Math.round(Math.random() * 100000);
 ts=String.fromCharCode(60);
 if (window.self != window.top) {nf=''} else {nf='NF/'};
 document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad13103b.cgi/v=2.2S/sz=300x250A/NZ/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad13103b.cgi/v=2.2S/sz=300x250A/NZ/24986/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad13103b-map.cgi/ns/v=2.2S/sz=300x250A/" target="_top">
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad13103b.cgi/v=2.2S/sz=300x250A/NZ/29945/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad13103b-map.cgi/ns/v=2.2S/sz=300x250A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/ad13103b.cgi/ns/v=2.2S/sz=300x250A/" border="0" alt="Click Here" /></a>
 </noscript>
 <!-- END BURST CODE -->
@@ -455,7 +456,7 @@ rnum=Math.round(Math.random() * 100000);
 ts=String.fromCharCode(60);
 if (window.self != window.top) {nf=''} else {nf='NF/'};
 document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/sk13103b.cgi/v=2.2S/sz=120x600A|160x600A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/sk13103b.cgi/v=2.2S/sz=120x600A|160x600A/88538/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/sk13103b-map.cgi/ns/v=2.2S/sz=120x600A|160x600A/" target="_top">
+</script><script src="http://www.burstnet.com/cgi-bin/ads/sk13103b.cgi/v=2.2S/sz=120x600A|160x600A/16203/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/sk13103b-map.cgi/ns/v=2.2S/sz=120x600A|160x600A/" target="_top">
 <img src="http://www.burstnet.com/cgi-bin/ads/sk13103b.cgi/ns/v=2.2S/sz=120x600A|160x600A/" border="0" alt="Click Here" /></a>
 </noscript>
 <!-- END BURST CODE -->
@@ -472,7 +473,7 @@ document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/sk13103b.cgi/
 <font size="1">
 
 
-<center><font color="#FFFFFF"><b>Top 20 ROMs</b></font></center><br>» <a href="http://www.coolrom.com/roms/n64/1232/Super_Smash_Bros..php"><font size="1">Super Smash Bros.</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1142/Resident_Evil_2.php"><font size="1">Resident Evil 2</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/neogeo/1315/King_of_Fighters_2002.php"><font size="1">King of Fighters 2..</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1190/GoldenEye_007.php"><font size="1">GoldenEye 007</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/neogeo/1270/Metal_Slug_5.php"><font size="1">Metal Slug 5</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/snes/1033/Final_Fantasy_III.php"><font size="1">Final Fantasy III</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/gba/14488/Pokemon_-_Fire_Red.php"><font size="1">Pokemon - Fire Red</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/gba/14604/Pokemon_Emerald.php"><font size="1">Pokemon Emerald</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/gbc/3998/Pokemon_Gold.php"><font size="1">Pokemon Gold</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1092/Conker's_Bad_Fur_Day.php"><font size="1">Conker's Bad Fur D..</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1128/Pokemon_Stadium_2.php"><font size="1">Pokemon Stadium 2</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/snes/621/Chrono_Trigger.php"><font size="1">Chrono Trigger</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1242/Banjo-Kazooie.php"><font size="1">Banjo-Kazooie</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1154/Perfect_Dark.php"><font size="1">Perfect Dark</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/gba/14374/Yu-Gi-Oh!_GX_-_Duel_Academy.php"><font size="1">Yu-Gi-Oh! GX - Due..</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1146/Harvest_Moon_64.php"><font size="1">Harvest Moon 64</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/gbc/6520/Pokemon_Silver.php"><font size="1">Pokemon Silver</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1589/Spider-Man.php"><font size="1">Spider-Man</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/neogeo/1280/Metal_Slug_4.php"><font size="1">Metal Slug 4</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/neogeo/12/Metal_Slug_X.php"><font size="1">Metal Slug X</font></a><font size="1"><br>
+<center><font color="#FFFFFF"><b>Top 20 ROMs</b></font></center><br>» <a href="http://www.coolrom.com/roms/n64/1232/Super_Smash_Bros..php"><font size="1">Super Smash Bros.</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1142/Resident_Evil_2.php"><font size="1">Resident Evil 2</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/neogeo/1315/King_of_Fighters_2002.php"><font size="1">King of Fighters 2..</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1190/GoldenEye_007.php"><font size="1">GoldenEye 007</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/neogeo/1270/Metal_Slug_5.php"><font size="1">Metal Slug 5</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/gba/14488/Pokemon_-_Fire_Red.php"><font size="1">Pokemon - Fire Red</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/gba/14604/Pokemon_Emerald.php"><font size="1">Pokemon Emerald</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/snes/1033/Final_Fantasy_III.php"><font size="1">Final Fantasy III</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/gbc/3998/Pokemon_Gold.php"><font size="1">Pokemon Gold</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1128/Pokemon_Stadium_2.php"><font size="1">Pokemon Stadium 2</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1092/Conker's_Bad_Fur_Day.php"><font size="1">Conker's Bad Fur D..</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/gba/14374/Yu-Gi-Oh!_GX_-_Duel_Academy.php"><font size="1">Yu-Gi-Oh! GX - Due..</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/snes/621/Chrono_Trigger.php"><font size="1">Chrono Trigger</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1242/Banjo-Kazooie.php"><font size="1">Banjo-Kazooie</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1154/Perfect_Dark.php"><font size="1">Perfect Dark</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1146/Harvest_Moon_64.php"><font size="1">Harvest Moon 64</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/gbc/6520/Pokemon_Silver.php"><font size="1">Pokemon Silver</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/n64/1589/Spider-Man.php"><font size="1">Spider-Man</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/neogeo/1280/Metal_Slug_4.php"><font size="1">Metal Slug 4</font></a><font size="1"><br>» <a href="http://www.coolrom.com/roms/snes/7968/Super_Mario_World.php"><font size="1">Super Mario World</font></a><font size="1"><br>
 <br>
 
 <!-- ADDTHIS BUTTON BEGIN -->
