--- a/c/co/con/conversational-hypnosis.com.html
+++ b/c/co/con/conversational-hypnosis.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the conversational-hypnosis.com privacy policy that was archived on 2008-04-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080413060229id_/http%3A//www.conversational-hypnosis.com/Privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the conversational-hypnosis.com privacy policy that was archived on 2010-07-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100726111245id_/http%3A//conversational-hypnosis.com/Privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy - Conversational-Hypnosis.com</title>
