--- a/g/ga/gab/gabrielmethod.com.html
+++ b/g/ga/gab/gabrielmethod.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gabrielmethod.com privacy policy that was archived on 2010-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100609051647id_/http%3A//www.gabrielmethod.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gabrielmethod.com privacy policy that was archived on 2010-07-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100726122011id_/http%3A//www.gabrielmethod.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -122,7 +122,7 @@
 
 	<li class="menuItem ">
 		
-			<a href="http://www.gabrielmethod.com/testimonials">Testimonials
+			<a href="http://www.gabrielmethodtest.com">Testimonials
 			
 			
 			
