tendersinfo.com (archived on 2010-07-27)
{
  "alexa_rank": 73792,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 1726,
  "classifier_probability": 0.77,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.33,
  "homepage_snapshot_redirected_domain": "tendersinfo.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100819124110id_/http://www.tendersinfo.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100819124110id_/http%3A//tendersinfo.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "tendersinfo.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100727070619id_/http%3A//www.tendersinfo.com/privacy-policy.php",
  "policy_title": "Privacy policy - Tenders Info",
  "policy_url": "tendersinfo.com/privacy-policy.php",
  "sha1": "831f923fd28f95b33f4930439e6806e58afeba75",
  "simhash": 863480477361245096,
  "simhash_updated": true,
  "site_hostname": "tendersinfo.com",
  "site_url": "http://tendersinfo.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20100727070619",
  "word_count": 300,
  "year": 2010
}

--- a/t/te/ten/tendersinfo.com.html
+++ b/t/te/ten/tendersinfo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tendersinfo.com privacy policy that was archived on 2010-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100617131032id_/http%3A//www.tendersinfo.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tendersinfo.com privacy policy that was archived on 2010-07-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100727070619id_/http%3A//www.tendersinfo.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -472,46 +472,19 @@
 		</div>
 		<h6><a href="http://www.tendersinfo.com/advanced-search.php">Advanced Search</a></h6>
 		<div class="clear"></div>
-
-      <!-- BEGIN STANDARD TAG - 300 x 250 - tendersinfo.com: Run-of-site - DO NOT MODIFY 
-<IFRAME FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=300 HEIGHT=250 SRC="http://ext.tyroo.com/st?ad_type=iframe&ad_size=300x250&section=538020"></IFRAME>
- END TAG -->
- <!--<p align="justify"><b>
- <a target="_blank" class="romcolor" href="http://www.tendersinfo.com/members/tenders-details.php?site_tender_id=5870995">Operation of Heavy Mineral Beach Sand Mines for APMDC, Setting-up of Mineral Separation Plants & Value Added Industries</a>
-	</b></p>	  <br/> <br/>-->
-                      <!-- images here add -->
-					  	<h6 class="romcolor"><strong>Tenders from APMDC</strong></h6>
-		
-<br>	
-	<p align="center">	<a target="_blank" title=" (1) Operation of Heavy Mineral Beach Sand Mines for APMDC, Setting-up of Mineral Separation Plants &amp; Value Added Industries
-(2) Centralized quarrying operation &amp; primary crushing of stone &amp; metal in mining zones for APMDC.
-(3) Providing of Mining Development Operators for the Exploitation, R&amp;D and Operation of FULLERENE Mines.
-	" href="http://www.tendersinfo.com/apmdc-tenders.php"><img src="apmdc2.png" border="0"></a></p>
-	<p>
-		<a target="_blank" title=" (1) Operation of Heavy Mineral Beach Sand Mines for APMDC, Setting-up of Mineral Separation Plants &amp; Value Added Industries
-(2) Centralized quarrying operation &amp; primary crushing of stone &amp; metal in mining zones for APMDC.
-(3) Providing of Mining Development Operators for the Exploitation, R&amp;D and Operation of FULLERENE Mines.	
-				" href="http://www.tendersinfo.com/apmdc-tenders.php"><img src="apmdc.jpg" border="0"></a>
-				</p>
-
-<br>				
-
-<!-- AddThis Button BEGIN -->
+    <!-- images here add -->
+	<a target="_blank" href="Risk-Management-Financia-and-Operational.pdf"><img src="TIimage.gif" border="0"></a>
+			<u><b> <h6 class="romcolor"><a target="_blank" href="Risk-Management-Financia-and-Operational.pdf">Risk Management Financial And Operational </a></h6></b>	</u>
+<br>			
+	<!-- AddThis Button BEGIN -->
 <a class="addthis_button" href="http://www.addthis.com/bookmark.php?v=250&amp;pub=anileuclid">
 <img src="http://s7.addthis.com/static/btn/v2/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"></a>
 
 <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pub=anileuclid"></script>
 <!-- AddThis Button END -->
 
-            <h6 class="romcolor"><strong>Procurement News</strong></h6>
-<!--
-            <ul class="list">-->
-    
-            
+    <h6 class="romcolor"><strong>Procurement News</strong></h6>         
 <marquee width="240px" height="110px" direction="up" scrollamount="3" onmouseover="this.setAttribute('scrollamount', 0, 0);" onmouseout="this.setAttribute('scrollamount', 3, 0);"><ul class="list"><li><a href="news.php?id=138"><font color="#842432">India: Print Week India launches Awards for 2010</font></a></li><li><a href="news.php?id=137"><font color="#842432">Canada: Demolition Tender Awarded to Sudbury Firm</font></a></li><li><a href="news.php?id=136"><font color="#842432">India: PEC Limited Floats Tender For RBD Palmolein</font></a></li><li><a href="news.php?id=135"><font color="#842432">Singapore: Industrial Site at Woodlands Ave 12 put up for Public Tender</font></a></li><li><a href="news.php?id=134"><font color="#842432">United States: PGAV Destinations Wins Significant Projects Integral to Tourism Growth in China</font></a></li></ul></marquee><br><a href="news.php"><b>More News</b></a>
-<!--</ul> 
-  <a href="news.php">More News</a>-->
-
 </div>
 		</div>
                 </div>
