--- a/y/ya/yal/yalwa.com.au.html
+++ b/y/ya/yal/yalwa.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yalwa.com.au privacy policy that was archived on 2010-04-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100406005032id_/http%3A//www.yalwa.com.au/info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yalwa.com.au privacy policy that was archived on 2010-07-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100727162802id_/http%3A//www.yalwa.com.au/info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Yalwa Info pages</title>
@@ -9,15 +9,17 @@
 <meta http-equiv="language" content="en">
 <meta http-equiv="content-language" content="en-au">
 
-<link rel="stylesheet" href="http://static.yalwa.com.au/styles/1243_0331/main_yalwa.css" type="text/css">
+<link rel="stylesheet" href="http://static.yalwa.com.au/styles/2320_0723/main_yalwa.css" type="text/css">
 <link rel="icon" href="http://static.yalwa.com.au/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="http://static.yalwa.com.au/favicon.ico" type="image/x-icon"> 
+<link rel="shortcut icon" href="http://static.yalwa.com.au/favicon.ico" type="image/x-icon">
+
 <meta name="robots" content="NOINDEX,FOLLOW,NOARCHIVE">
 <meta name="googlebot" content="NOINDEX,FOLLOW,NOARCHIVE">
 
 
-<script type="text/javascript" src="http://static.yalwa.com.au/js/1243_0331/basics.js"></script>
-<script type="text/javascript" src="http://static.yalwa.com.au/js/1243_0331/setup_favs/"></script>
+
+<script type="text/javascript" src="http://static.yalwa.com.au/js/2320_0723/basics.js"></script>
+<script type="text/javascript" src="http://static.yalwa.com.au/js/2320_0723/setup_favs/"></script>
 
 <script type="text/javascript">
 // <![CDATA[
@@ -33,7 +35,8 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 <script type="text/javascript">
 // <![CDATA[
 var as_tracking_code = "";
-var secondTracker = _gat._getTracker("UA-785042-33");
+var secondTracker = _gat._getTracker("UA-16150510-1");
+var thirdTracker = _gat._getTracker("UA-785042-33");
 
 var pageTracker = _gat._getTracker("UA-2027383-7");
 
@@ -43,22 +46,23 @@ var pageTracker = _gat._getTracker("UA-2027383-7");
 </head>
 <body onload="setupFavs();">
 <!-- google_ad_section_start(weight=ignore) -->
-
 <div id="main">
 	<div id="top">
 		<div id="above_tabs">
 
 		<div class="header_link_box">
 			<a rel="nofollow" href="http://www.yalwa.com.au/run/favorites/"><img src="http://static.yalwa.com.au/images/16/star_yellow.png" align="absmiddle" alt="My Favourite Listings"> (<span id="favorite_count">0</span>)</a> |			<a rel="nofollow" href="http://www.yalwa.com.au/faq/?action=show&amp;hl=en">Help</a>
-			| <a href="http://www.yalwa.com.au/" onclick="unsetDefault();window.location='http://www.yalwa.com.au/';return false;">Select City</a>
+			| <a href="http://www.yalwa.com.au/run/city_select/" onclick="unsetDefault();window.location='http://www.yalwa.com.au/run/city_select/';return false;">Select City</a>
 		</div>
 
 
 
 
-		<a href="/" id="logo">
+		<div id="logo">
+			<a href="/">
 			<img src="http://static.yalwa.com.au/images/Yalwa_180.jpg" title="Free Business Directory Australia" alt="Free Business Directory Australia"><img src="http://static.yalwa.com.au/images/flags/flag_com.au.png" alt="Australia">
-		</a>
+			</a>
+		</div>
 
 		<div class="location">
 			<h1>Free Business Directory</h1>
@@ -69,9 +73,9 @@ var pageTracker = _gat._getTracker("UA-2027383-7");
 		<div id="divider"></div>
 		<div class="topnav">
 			
+			<div style="clear:both;"></div>
 		</div>
-		<script type="text/javascript" src="http://static.yalwa.com.au//js/1243_0331/header_init.js"></script>
-		<div style="clear:both;"></div>	</div>
+			</div>
 
 <!-- google_ad_section_end(weight=ignore) --><div id="middleleft">
 
@@ -107,10 +111,10 @@ var pageTracker = _gat._getTracker("UA-2027383-7");
 </ul>
 <div class="p">  <strong>Using Information from Yalwa.</strong>
  You may use personal information gathered from Yalwa only to follow up with another user about a specific posting, not to send spam or collect personal information from someone who hasn't agreed to that. </div>
-<div class="p">  <strong>Access, Modification, and Deletion.</strong> You can see, modify or erase your personal information by reviewing your posting or account status page.  Contact customer support  (<span id="my269706008"><a href="mailto:support@yalwa.com.au">support@yalwa.com.au</a></span><script type="text/javascript">
+<div class="p">  <strong>Access, Modification, and Deletion.</strong> You can see, modify or erase your personal information by reviewing your posting or account status page.  Contact customer support  (<span id="my258645236"><a href="mailto:support@yalwa.com.au">support@yalwa.com.au</a></span><script type="text/javascript">
 	// <![CDATA[
-	{ coded = "A011gKi@HZ6kZ.hgP.Z0"
-		  key = "xEZ5INuDyCPjkSpAeoRrcL4bFG0lHvt3zM17Vg9KhQnOaXT68diYmfwqUsBWJ2" 
+	{ coded = "64WWnUE@2Nm0N.Bnh.N4"
+		  key = "zrtuxNlZS879dQcOVJL5iUE4KHmjewpRgYBTqsyAovCMFfha10WPGkXb362DnI" 
 		  shift=coded.length
 		  link=""
 		  for (i=0; i<coded.length; i++) {
@@ -122,16 +126,16 @@ var pageTracker = _gat._getTracker("UA-2027383-7");
 		      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
 		      link += (key.charAt(ltr))
 		    }
-		  }document.getElementById("my269706008").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
+		  }document.getElementById("my258645236").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 		}
 //]]>
 </script>) to review any personal information we store that is not available on Yalwa. There may a charge associated with such requests but these will not exceed the amounts permitted by law. We delete personal information when we no longer need it for the purposes we described earlier. We retain personal information as permitted by law to resolve disputes, enforce our policies; and prevent bad guys from coming back.</div>
 
 <div class="p"><strong>Security.</strong> We use lots of tools (encryption, passwords, physical security) to protect your personal information against unauthorized access and disclosure, but as you probably know, nothing's perfect, so we make no guarantees.</div>
-<div class="p"><strong>General.</strong> We may update this policy at any time, with updates taking effect when you next post or after 30 days, whichever is sooner.  If we or our corporate affiliates are involved in a merger or acquisition, we may share personal information with another company, but this policy will continue to apply. Send questions about this policy to <span id="my277804251"><a href="mailto:privacy@yalwa.com.au">privacy@yalwa.com.au</a></span><script type="text/javascript">
+<div class="p"><strong>General.</strong> We may update this policy at any time, with updates taking effect when you next post or after 30 days, whichever is sooner.  If we or our corporate affiliates are involved in a merger or acquisition, we may share personal information with another company, but this policy will continue to apply. Send questions about this policy to <span id="my545472292"><a href="mailto:privacy@yalwa.com.au">privacy@yalwa.com.au</a></span><script type="text/javascript">
 	// <![CDATA[
-	{ coded = "LV7DUHF@FUwKU.H63.Un"
-		  key = "7MCRtBYWNEgpaqjVDJxomlPGQcukSAyLU0f912Z63wiOdHneTXF45bzIsrv8hK" 
+	{ coded = "5Cq7XKb@bX6RX.KEo.XF"
+		  key = "FilwQWy8GvMLUsnCdBYmjq6Rg3bPf7epcHVzaJxo94uNkSODZt05KhI2XrAE1T" 
 		  shift=coded.length
 		  link=""
 		  for (i=0; i<coded.length; i++) {
@@ -143,7 +147,7 @@ var pageTracker = _gat._getTracker("UA-2027383-7");
 		      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
 		      link += (key.charAt(ltr))
 		    }
-		  }document.getElementById("my277804251").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
+		  }document.getElementById("my545472292").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 		}
 //]]>
 </script>.</div>
@@ -156,7 +160,7 @@ var pageTracker = _gat._getTracker("UA-2027383-7");
 </div>
 <div class="footer">
 	<span class="first_element"><a target="_blank" rel="nofollow" href="http://www.yalwa.com.au/info/terms/">Terms of Use</a></span>
-	<span><a rel="nofollow" href="/info/imprint/">Imprint</a></span>
+	<span><a rel="nofollow" target="_blank" href="/info/imprint/">Imprint</a></span>
 	<span><a target="_blank" rel="nofollow" href="http://www.yalwa.com.au/info/privacy/">Privacy Policy</a></span>
 		  <span><a href="http://www.yalwa.info/local_business/blog/">Blog</a></span>
 							<span><a href="http://www.yalwa.com.au/faq/?action=contact&amp;hl=en">Contact Us</a></span>
@@ -165,7 +169,7 @@ var pageTracker = _gat._getTracker("UA-2027383-7");
 	<span class="first_element">Copyright © 2010 Yalwa<sup>™</sup></span>
 <br>
 </div>
-<div class="fo">&nbsp;&nbsp;<i>sun4</i></div>
+<div class="fo">&nbsp;&nbsp;<i>sun6</i></div>
 </div>
 
 <script type="text/javascript">
@@ -173,6 +177,7 @@ var pageTracker = _gat._getTracker("UA-2027383-7");
 pageTracker._trackPageview();
 
 secondTracker._trackPageview();
+thirdTracker._trackPageview();
 // ]]>
 </script>
 
