myfab.com (archived on 2010-07-27)
{
  "alexa_rank": 26000,
  "analysis_subcorpus": true,
  "categories": "business;education;shopping",
  "char_count": 4942,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.76,
  "homepage_snapshot_redirected_domain": "myfab.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100921025756id_/http://www.myfab.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100921025756id_/http%3A//myfab.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "myfab.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100727172619id_/http%3A//www.myfab.com/privacy-policy",
  "policy_title": "privacy policy",
  "policy_url": "myfab.com/privacy-policy",
  "sha1": "182b32d7cd2f91d6c96b6152ebfd7cb574f122ce",
  "simhash": 1962873674828156477,
  "simhash_updated": true,
  "site_hostname": "myfab.com",
  "site_url": "http://myfab.com",
  "smog": 13.87,
  "strict_updated": true,
  "timestamp": "20100727172619",
  "word_count": 822,
  "year": 2010
}

--- a/m/my/myf/myfab.com.html
+++ b/m/my/myf/myfab.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myfab.com privacy policy that was archived on 2010-04-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100415220132id_/http%3A//www.myfab.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myfab.com privacy policy that was archived on 2010-07-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100727172619id_/http%3A//www.myfab.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <script type="text/javascript">
@@ -20,7 +20,7 @@ function middlecontainerdisplay()
 <meta name="keywords" content="">
 <meta name="robots" content="INDEX,FOLLOW">
 <script>
-	HDUSeed='3466cc6066c989d5e2ca61e01f263c0e';
+	HDUSeed='45d9ce61cfb1bfbbe7e81a39d06cd6bf';
 	window.HDUSeedIntId = setInterval(function(){
 		if (document.observe) {
 			document.observe('dom:loaded', function(){
@@ -45,9 +45,9 @@ function middlecontainerdisplay()
 //]]>
 </script>
 
-<link rel="stylesheet" type="text/css" href="http://us.media.myfab.com/media/fileversioner/css/3ae186a69e1d7daf6e811d8b7fceacfe1.0.css" media="all">
+<link rel="stylesheet" type="text/css" href="http://us.media.myfab.com/media/fileversioner/css/e7f8c9b4adcd430cdcc544e043cef9cf1.0.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://us.media.myfab.com/media/fileversioner/css/dd0092d01755e056e410de93540837d71.0.css" media="print">
-<script type="text/javascript" src="http://us.media.myfab.com/media/fileversioner/js/ef22f78066176004725ea7e23ef3ba091.0.js"></script>
+<script type="text/javascript" src="http://us.media.myfab.com/media/fileversioner/js/4835d22929d011ab6c3fe01194cdc6a61.0.js"></script>
 <!--[if lt IE 8]>
 <link rel="stylesheet" type="text/css" href="http://us.media.myfab.com/media/fileversioner/css/a7a08f7996ecca8b88e062a960609d9e1.0.css" media="all" />
 <![endif]-->
@@ -55,12 +55,12 @@ function middlecontainerdisplay()
 <link rel="stylesheet" type="text/css" href="http://us.media.myfab.com/media/fileversioner/css/f0629dbc160d13a8e93dd2dd5f642de71.0.css" media="all" />
 <script type="text/javascript" src="http://us.media.myfab.com/media/fileversioner/js/d6876aecd5f32b7566a6c7a832cf91ea1.0.js"></script>
 <![endif]-->
-<script type="text/javascript">var Translator = new Translate({"Please enter a valid email address. For example johndoe@domain.com.":"Please enter a valid referral member's email address. For example johndoe@domain.com.","Please enter a valid zip code. For example 90602 or 90602-1234.":"Please enter a valid zip code with 5 digits."});</script></head>
+<script type="text/javascript">var Translator = new Translate({"Please enter a valid email address. For example johndoe@domain.com.":"Please enter a valid referral member's email address. For example johndoe@domain.com.","Please enter a valid zip code. For example 90602 or 90602-1234.":"Please enter a valid zip code with 5 digits.","Please enter a valid day (1-31).":"Please enter a valid day (1-31).","Please enter a valid month (1-12).":"Please enter a valid month (1-12).","Please enter a valid year (1900-2010).":"Please enter a valid year (1900-2010).","Please enter a valid full date.":"Please enter a valid full date."});</script></head>
 <body class=" cms-page-view cms-privacy-policy" onload="middlecontainerdisplay();" style="background-color:#cecece">
 
 
 <!-- start header -->
-    <div style="width:100%; text-align:center; background:#FFFFFF;"><div style="width: 100%; background:#FFFFFF; "><img style="position:relative; " src="http://us.media.myfab.com/media/home/light_for_homepage.jpg"><span style="font-size:10px; font-family: arial,helvetica,sans-serif; font-weight:bold;">Currently myfab is only available to California customers, but we will soon be launching throughout the continental US.</span>&nbsp;&nbsp; <span style=" font-weight:bold; font-size: 12px; margin-left:130px;">REGISTER NOW</span> <span style="font-size: 10px;">to receive a</span> <span style="font-size:12px;  font-weight:bold;">15$ welcome coupon!</span></div></div>    <div class="header-back" style="background: transparent url(http://us.media.myfab.com/skin/frontend/myfab/default/images/backheader.jpg) center top no-repeat;">
+    <div style="width:100%; text-align:center; background:#FFFFFF;"><div style="width: 100%; background:#FFFFFF; "><img style="position:relative; " src="http://us.media.myfab.com/media/home/light_for_homepage.jpg"><span style="font-size:10px; font-family: arial,helvetica,sans-serif; font-weight:bold;">Under construction. Soon back in service. </span>&nbsp;&nbsp; </div></div>    <div class="header-back" style="background: transparent url(http://us.media.myfab.com/skin/frontend/myfab/default/images/backheader.jpg) center top no-repeat;">
     <div class="header" style="width: 1033px; margin: 0 auto;">
         <table class="header-container" style="width:100%; border-spacing:0" cellspacing="0"><tbody><tr>
 
@@ -82,8 +82,8 @@ function middlecontainerdisplay()
              <div class="header-top-right-top"><!-- shop acces -->             
     <div>
         <ul>
-                        			<li class="first"><a href="http://www.myfab.com/customer/account/login/" rel="nofollow" title="Login">Login</a>|</li>
-                                                                    			<li><a href="http://www.myfab.com/checkout/cart/" rel="nofollow" title="" class="top-link-cart" id="top-link-cart">My Cart</a>|</li>
+                                                                    			<li class="first"><a href="http://www.myfab.com/checkout/cart/" rel="nofollow" title="" class="top-link-cart" id="top-link-cart">My Cart</a>|</li>
+                        			<li><a href="http://www.myfab.com/customer/account/login/" rel="nofollow" title="Login">Login</a>|</li>
                         			<li><a href="http://www.myfab.com/customer-service/" rel="nofollow" title="Help">Help</a>|</li>
                         			<li class="last"><a href="http://www.myfab.com/about-us/" rel="nofollow" title="About myfab">About myfab</a></li>
         </ul>
@@ -120,7 +120,7 @@ function middlecontainerdisplay()
               <div class="quicklinks-div1">
 	<div class="quicklink-left quicklink-left-div" style="float: left;">
 		<a href="http://www.myfab.com/bestsellers.html">Bestsellers</a>
-		<a href="http://www.myfab.com/new-products.html">New Products</a>
+		<a href="http://www.myfab.com/new-products.html">Newest</a>
 		<a href="http://www.myfab.com/collection/ending">Ending Soon</a>
 	</div>
 	<div class="quicklink-right" style="float: right;">
@@ -237,9 +237,7 @@ function middlecontainerdisplay()
 				</div>
 			<!-- start left -->
 				<div class="col-left side-col">	
-					<style>
-.nav-collections-my-funny-valentine a span {color:#ff0000 !important}
-</style><div id="vertical_container" style="display:block; width:169px; background:#fafafa;"><ul style="display:block; padding-left:18px;" class="level0 nav-categories accordion_content"><li style="display:block;" class="level1 nav-pictures"><a href="http://www.myfab.com/categories/pictures.html" style=""><span>Wall Art</span></a></li><li style="display:block;" class="level1 nav-ottomans"><a href="http://www.myfab.com/categories/home/furniture/beanbags/ottomans.html" style=""><span>Ottomans</span></a></li><li style="display:block;" class="level1 nav-sofas"><a href="http://www.myfab.com/categories/home/furniture/sofas.html" style=""><span>Sofas</span></a></li><li style="display:block;" class="level1 nav-armchairs"><a href="http://www.myfab.com/categories/home/furniture/armchairs.html" style=""><span>Armchairs</span></a></li><li style="display:block;" class="level1 nav-chairs"><a href="http://www.myfab.com/categories/home/furniture/chairs.html" style=""><span>Chairs</span></a></li><li style="display:block;" class="level1 nav-tables"><a href="http://www.myfab.com/categories/home/furniture/tables.html" style=""><span>Tables</span></a></li><li style="display:none;" class="level1 nav-storage"><a href="http://www.myfab.com/categories/home/furniture/storage.html" style=""><span>Storage</span></a></li><li style="display:block;" class="level1 nav-lighting"><a href="http://www.myfab.com/categories/home/lighting.html" style=""><span>Lighting</span></a></li><li style="display:block;" class="level1 nav-leisure"><a href="http://www.myfab.com/categories/leisure.html" style=""><span>Gameroom</span></a></li><li style="display:block;" class="level1 nav-home-deco"><a href="http://www.myfab.com/categories/home/home-decor/kitchenware.html" style=""><span>Kitchenware</span></a></li></ul></div><!--
+					<div id="vertical_container" style="display:block; width:169px; background:#fafafa; min-height: 204px;"><ul style="display:block; padding-left:18px;" class="level0 nav-categories accordion_content"><li style="display:block;" class="level1 nav-pictures"><a href="http://www.myfab.com/categories/pictures.html" style=""><span>Wall Art</span></a></li><li style="display:block;" class="level1 nav-ottomans"><a href="http://www.myfab.com/categories/home/furniture/beanbags/ottomans.html" style=""><span>Ottomans</span></a></li><li style="display:block;" class="level1 nav-sofas"><a href="http://www.myfab.com/categories/home/furniture/sofas.html" style=""><span>Sofas</span></a></li><li style="display:block;" class="level1 nav-armchairs"><a href="http://www.myfab.com/categories/home/furniture/armchairs.html" style=""><span>Armchairs</span></a></li><li style="display:block;" class="level1 nav-chairs"><a href="http://www.myfab.com/categories/home/furniture/chairs.html" style=""><span>Chairs</span></a></li><li style="display:block;" class="level1 nav-tables"><a href="http://www.myfab.com/categories/home/furniture/tables.html" style=""><span>Tables</span></a></li><li style="display:none;" class="level1 nav-storage"><a href="http://www.myfab.com/categories/home/furniture/storage.html" style=""><span>Storage</span></a></li><li style="display:block;" class="level1 nav-lighting"><a href="http://www.myfab.com/categories/home/lighting.html" style=""><span>Lighting</span></a></li><li style="display:block;" class="level1 nav-leisure"><a href="http://www.myfab.com/categories/leisure.html" style=""><span>Gameroom</span></a></li><li style="display:block;" class="level1 nav-home-deco"><a href="http://www.myfab.com/categories/home/home-decor/kitchenware.html" style=""><span>Kitchenware</span></a></li></ul></div><!--
 <div class="box">
             <a href="http://www.myfab.com/checkout/cart/">
         <img src="http://us.media.myfab.com/skin/frontend/myfab/default/images/media/col_left_callout.jpg" width="195" alt="Our customer service is available 24/7. Call us at (555)
@@ -247,13 +245,83 @@ function middlecontainerdisplay()
         </a>
     </div>-->
 <div class="block-reverse">
-                    <div style="margin-left:-6px; margin-top:20px;">
-<div class=""><span style="font-size:21px;  color: #e01f2d;  font-weight: bold; ">Buy online,</span></div>
-<div style="margin-top:4px;"><span style="font-size:13px;  color: #e01f2d;   font-weight: bold;">direct from</span></div>
-<div style="margin-top:-3px;"><span style="font-size:13px;  color: #e01f2d;  font-weight: bold; ">factories, </span></div>
-<div style="margin-top:3px;"><span style="font-size:20px;  color: #e01f2d;  font-weight: bold; ">without</span></div>
-<div style="margin-top:0px;"><span style="font-size:20px;  color: #e01f2d;  font-weight: bold; ">intermediaries.</span></div>
-<div style="margin-top:15px;"><img src="http://www.myfab.com/skin/frontend/myfab/us/images/Block_marketing_us.jpg"></div>
+                    <style type="text/css">
+    <!--
+
+    .block-marketing {
+        font-size: 12px;
+        font-weight: normal;
+    }
+
+    .block-marketing-header {
+        color: #e01f2d;
+        font-weight: bold;
+        margin-top: 20px;
+    }
+
+    .block-marketing-content {
+        margin-top: 20px;
+        line-height: 13px;
+    }
+
+    .block-marketing-content-footer {
+        color: #e01f2d;
+        margin-top: 15px;
+        font-weight: bold;
+    }
+
+    .block-marketing-footer {
+        margin-top: 20px;
+        margin-bottom: 10px;
+        vertical-align: middle;
+        color: #FFFFFF;
+    }
+
+    .block-marketing-footer a {
+        color: #FFFFFF;
+        text-decoration: none;
+        margin-left:10px;
+        margin-top:5px;
+        float:left;
+    }
+
+    .block-marketing-footer a:hover {
+        color:#E01F2D;
+        text-decoration:none;
+    }
+
+    .block-marketing-footer img {
+        cursor: pointer;
+        float:left;
+    }
+
+    .block-marketing-footer-txt {
+        margin-top:5px;
+        margin-left:5px;
+        float:left;
+    }
+
+    .block-marketing-footer-clear { clear:both; }
+
+
+    -->
+</style>
+
+<div class="block-marketing">
+    <div class="block-marketing-header">
+        <span style="font-size: 28.92px; line-height: 30px;">You Vote.<br>You Decide.</span>
+    </div>
+    <div class="block-marketing-content">
+        <span>Through myfab's vote section,</span>
+        <span>you help decide which products</span>
+        <span>are made available for purchase.</span>
+    </div>
+    <div class="block-marketing-footer">
+        <img border="0" onclick="loadAndDisplayVideo();" src="http://us.media.myfab.com/skin/frontend/myfab/default/images/picto_play1jpg.jpg" alt="">
+        <span class="block-marketing-footer-txt">Video</span>
+        <a href="/about-us/">Learn more</a>
+        <div class="block-marketing-footer-clear"></div>
+    </div>
 </div>    </div>
 
 
@@ -339,25 +407,23 @@ div.marketing-footer-9 { height:110px; }
 </a>    </td>
 <td class="dot-between-motif"></td>
 <td>                <style>
-.footer-large div.marketing-footer-6 { background: url(http://us.media.myfab.com/media/footermarketing/us/footer_r1_c2.png) no-repeat; }  
-.footer div.marketing-footer-6 { background: url(http://us.media.myfab.com/media/footermarketing/us/footer_r1_c2.png); }
-div.marketing-footer-6 { height:110px; }
+.footer-large div.marketing-footer-5 {  background: url(http://us.media.myfab.com/media/footermarketing/us/usfooter5.gif) no-repeat;  }  
+.footer div.marketing-footer-5 { background: url(http://us.media.myfab.com/media/footermarketing/us/usfooter5.gif) no-repeat; }
+div.marketing-footer-5 { height:110px; }
 
-.footer-large div.marketing-footer-6.title { padding-left:126px; color: #6B6B6B; padding-top: 12px; font-size: 18px; font-weight: bold; text-align:left;}  
-.footer div.marketing-footer-6 .title { padding-left:70px; color: #6B6B6B; padding-top: 20px; font-size: 17px; font-weight: bold; }  
+.footer-large div.marketing-footer-5 .title { padding-left:30px; color: #6B6B6B; padding-top: 15px;  font-size: 18px; font-weight: bold; }  
+.footer div.marketing-footer-5 .title { padding-left:75px; color: #6B6B6B; padding-top: 20px; font-size: 17px; font-weight: bold; }  
 
-.footer-large div.marketing-footer-6 .text { color: #6B6B6B; line-height: 12px; text-align:left;}  
-.footer div.marketing-footer-6 .text { color: #6B6B6B; line-height: 12px; }  
+.footer-large div.marketing-footer-5 .text { padding-left:30px; color: #6B6B6B; line-height: 13px; margin-top: 7px; width:255px;}  
+.footer div.marketing-footer-5 .text { padding-left:75px; color: #6B6B6B; line-height: 13px; margin-top: 5px; }  
 
-.footer-large div.marketing-footer-6 a { text-decoration:none;color: #6B6B6B; }
-.footer div.marketing-footer-6 a { text-decoration:none;color: #6B6B6B; } 
-.footer-large div.marketing-footer-6 a:hover { text-decoration:none;color: #6B6B6B; }
-.footer div.marketing-footer-6 a:hover { text-decoration:none;color: #6B6B6B; } 
+.marketing-footer a { text-decoration:none;color: #6B6B6B; }
+.marketing-footer a:hover { text-decoration:none;color: #6B6B6B; }
 </style>
 
-<a href="/vote/catalog/index/?_view=bts" alt="VOTE! Help decide our product line. Through myfab’s vote section, you help decide which products are made available for purchase." title="VOTE! Help decide our product line. Through myfab’s vote section, you help decide which products are made available for purchase.">
-<div class="marketing-footer marketing-footer-6">
-  
+<a href="/customer/account/login/" alt="Become a Member Be the first to know about our exclusive offers, get early notification of sales, and enjoy the right to vote. " title="Become a Member Be the first to know about our exclusive offers, get early notification of sales, and enjoy the right to vote. ">
+<div class="marketing-footer marketing-footer-5">
+
 </div>
 </a>    </td>
 <td class="dot-between-motif"></td>
@@ -419,11 +485,11 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 <script type="text/javascript">
 //<![CDATA[
 var pageTracker = _gat._getTracker("UA-3376956-1");
-pageTracker._trackPageview("/privacy-policy");
+pageTracker._trackPageview("/privacy-policy/");
 //]]>
 </script>
 <!-- END GOOGLE ANALYTICS CODE -->
-        </div>
+        <!-- Piwik --><script type="text/javascript">    var pkBaseURL = (("https:" == document.location.protocol) ? "https://server1.myfab.com/piwik/" : "http://server1.myfab.com/piwik/");    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://server1.myfab.com/piwik/piwik.js" type="text/javascript"></script><script type="text/javascript">    try {        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);        piwikTracker.trackPageView();        piwikTracker.enableLinkTracking();    } catch( err ) {}</script><noscript><p><img src="http://server1.myfab.com/piwik/piwik.php?idsite=1" style="border:0" alt=""/></p></noscript><!-- End Piwik Tag --></div>
 </div>
 <div class="content-back" style="background: #cecece url(http://us.media.myfab.com/skin/frontend/myfab/default/images/bottom-backborder.jpg) center repeat-y; height:20px; margin: 0;">&nbsp;</div>
 
