--- a/c/ch/che/chevybeat.co.in.html
+++ b/c/ch/che/chevybeat.co.in.html
@@ -1,64 +1,97 @@
-<!--The following is the downloaded HTML source of the chevybeat.co.in privacy policy that was archived on 2010-04-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100402051321id_/http%3A//www.chevrolet.co.in/content_data/AP/IN/en/GBPIN/001/BRANDSITE/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chevybeat.co.in privacy policy that was archived on 2010-07-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100727222703id_/http%3A//www.chevrolet.co.in/content_data/AP/IN/en/GBPIN/001/BRANDSITE/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<title>Privacy</title>
-<link href="/content_data/AP/IN/en/GBPIN/001/stylesheet/chevy.css" rel="stylesheet" type="text/css">
-<link href="/content_data/AP/IN/en/GBPIN/001/stylesheet/home2.css" rel="stylesheet" type="text/css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>Chevrolet india</title>
+<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
-<body class="black12nor">
-<p align="center" style="text-align:center;text-autospace:none"><b><span style="font-size:18.0pt;font-family:Arial;color:black">Privacy</span></b></p>
-<p style="text-align:justify;line-height:12.0pt;text-autospace:
-none"><span style="font-size:10.0pt;font-family:Arial;color:black">Neither you, 
-  nor General Motors Corporation including its subsidiaries like GMI (“GM”) would 
-  want that your personal information falls into the wrong hands. When you visit 
-  one of the GM Web sites, GM may collect and store information about your visit 
-  on GM systems. This information may include your personal information, name 
-  of your Internet Service Provider (ISP), the time and length of your visit, 
-  the pages you look at on our sites, and the site you visited just before coming 
-  to ours. GM may use this information only to measure site activity and to develop 
-  ideas for improving GM sites, for the benefit of GM’s prospective customers.</span></p>
-<p style="text-align:justify;line-height:12.0pt;text-autospace:
-none"><span style="font-size:10.0pt;font-family:Arial;color:black">There are also 
-  several opportunities on GM’s Web sites for you to provide us your personal 
-  information including your name, mailing address, e-mail address and your interests. 
-  If you choose to share any personal information with GM, we may store it and 
-  use it for our research and/or other marketing/sales related purposes, which 
-  may include sharing it with other companies in the GM family and GM’s business 
-  partners.</span></p>
-<p style="text-align:justify;line-height:12.0pt;text-autospace:
-none"><span style="font-size:10.0pt;font-family:Arial;color:black">You may note 
-  that when you voluntarily disclose personal information on GM’s Web site(s), 
-  such as chat rooms or bulletin boards, this information may be seen and used 
-  by others. We urge you to exercise good judgment when sharing personal information 
-  in these areas. </span></p>
-<p style="text-align:justify;line-height:12.0pt;text-autospace:
-none"><span style="font-size:10.0pt;font-family:Arial;color:black">Some of GM’s 
-  Web sites may make use of "cookie" technology to measure site activity 
-  and to customize information to your personal tastes. A cookie is an element 
-  of data that a Web site can send to your browser, which may then store the cookie 
-  on your hard drive. So, when you come back to visit GM’s site again, GM can 
-  tailor information to suit your individual preferences. The goal is to save 
-  your time and provide you with a more meaningful visit.</span></p>
-<p style="text-align:justify;line-height:12.0pt;text-autospace:
-none"><span style="font-size:10.0pt;font-family:Arial;color:black">The price stated 
-  here has been generally checked for accuracy but is subject to change at sole 
-  discretion of GM and is subject to applicable taxes. The contents of this page 
-  is subject to change without prior notice. Neither General Motors India Private 
-  Limited ("GMI") nor its dealers assumes responsibility for any pricing 
-  errors. In the event a vehicle is listed at an incorrect price or with incorrect 
-  information inadvertently, GMI or its dealers shall have the right to refuse 
-  any orders, which is based on incorrect price/information. </span></p>
-<p style="text-align:justify;line-height:12.0pt;text-autospace:
-none">
-<span style="font-size:10.0pt;font-family:Arial;color:black">GM reserves the right 
-to alter the privacy principles as business needs may require from time to time. 
-Any amendments to these principles will be available on GM Web sites in a timely 
-manner.
-</span>
-<script src="/content_data/AP/IN/en/GBPIN/001/js/s_code.js"></script>
-<script src="/content_data/AP/IN/en/GBPIN/001/js/Sitecatalyst.js"></script>
+<body>
+<div class="gry">
+            <!--Form Table-->
+            <table width="650" border="0" cellspacing="0" cellpadding="0" class="coofooter1">
+              <tbody><tr>
+                <td align="left" valign="top">&nbsp;</td>
+              </tr>
+              
+              <tr>
+                <td align="center" valign="top"><h1>Privacy</h1></td>
+              </tr>
+              <tr>
+                <td align="left" valign="top">&nbsp;</td>
+              </tr>
+              <tr>
+                <td align="left" class="coofooter1">Neither you, nor   General Motors Corporation including its subsidiaries like GMI (“GM”) would want   that your personal information falls into the wrong hands. When you visit one of   the GM Web sites, GM may collect and store information about your visit on GM   systems. This information may include your personal information, name of your   Internet Service Provider (ISP), the time and length of your visit, the pages   you look at on our sites, and the site you visited just before coming to ours.   GM may use this information only to measure site activity and to develop ideas   for improving GM sites, for the benefit of GM’s prospective   customers.<br>
+                  <br>
+                  There are also several   opportunities on GM’s Web sites for you to provide us your personal information   including your name, mailing address, e-mail address and your interests. If you   choose to share any personal information with GM, we may store it and use it for   our research and/or other marketing/sales related purposes, which may include   sharing it with other companies in the GM family and GM’s business   partners.<br>
+                  <br>
+                  You may note that when   you voluntarily disclose personal information on GM’s Web site(s), such as chat   rooms or bulletin boards, this information may be seen and used by others. We   urge you to exercise good judgment when sharing personal information in these   areas.<br>
+                  <br>
+                  Some of GM’s Web sites   may make use of "cookie" technology to measure site activity and to customize   information to your personal tastes. A cookie is an element of data that a Web   site can send to your browser, which may then store the cookie on your hard   drive. So, when you come back to visit GM’s site again, GM can tailor   information to suit your individual preferences. The goal is to save your time   and provide you with a more meaningful visit.<br>
+                  <br>
+                  The price stated here   has been generally checked for accuracy but is subject to change at sole   discretion of GM and is subject to applicable taxes. The contents of this page   is subject to change without prior notice. Neither General Motors India Private   Limited ("GMI") nor its dealers assumes responsibility for any pricing errors.   In the event a vehicle is listed at an incorrect price or with incorrect   information inadvertently, GMI or its dealers shall have the right to refuse any   orders, which is based on incorrect price/information.<br>
+                  <br>
+                  GM reserves the right   to alter the privacy principles as business needs may require from time to time.   Any amendments to these principles will be available on GM Web sites in a timely   manner. 
+                </td>
+              </tr>
+              <tr>
+                <td align="left">&nbsp;</td>
+              </tr>
+            </tbody></table>
+            <!--End Form Table-->
+</div>
+
+<!-- GA Code Starts-->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-9127430-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+<!-- GA Code Ends-->
 
 
-</p></body></html>
+<!-- SiteCatalyst code version: H.21.
+Copyright 1996-2010 Adobe, Inc. All Rights Reserved
+More info available at http://www.omniture.com -->
+<script language="JavaScript" type="text/javascript" src="script/s_code.js"></script>
+<script language="JavaScript" type="text/javascript"><!--
+/* You may give each page an identifying name, server, and channel on
+the next lines. */
+s.pageName="GMAP | IN | CHEVY | PRIVACY | HTML"
+s.server="chevrolet.co.in"
+s.channel="PRIVACY"
+s.pageType="HTML"
+s.prop1="GMAP | IN | CHEVY | PRIVACY"
+s.prop2="GMAP | IN | CHEVY"
+s.prop3="GMAP | IN | CHEVY"
+s.prop4="GMAP | IN"
+s.prop5="GMAP"
+/* Conversion Variables */
+s.campaign=""
+s.state=""
+s.zip=""
+s.events=""
+s.products=""
+s.purchaseID=""
+s.eVar1=""
+s.eVar2=""
+s.eVar3=""
+s.eVar4=""
+s.eVar5=""
+/************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
+var s_code=s.t();if(s_code)document.write(s_code)//--></script>
+<script language="JavaScript" type="text/javascript"><!--
+if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
+//--></script><noscript><a href="http://www.omniture.com" title="Web Analytics"><img
+src="http://gmap.112.2o7.net/b/ss/gmapinchevrolet/1/H.21--NS/0?[AQB]&cdp=3&[AQE]"
+height="1" width="1" border="0" alt="" /></a></noscript><!--/DO NOT REMOVE/-->
+<!-- End SiteCatalyst code version: H.21. -->
+
+
+
+</body></html>
