--- a/n/ne/nex/nexusradio.com.html
+++ b/n/ne/nex/nexusradio.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nexusradio.com privacy policy that was archived on 2010-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100619030637id_/http%3A//www.nexusradio.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nexusradio.com privacy policy that was archived on 2010-07-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100728075402id_/http%3A//www.nexusradio.com/privacy.php) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><head>
         <title>Privacy Policy</title>
@@ -26,9 +26,22 @@
 
 	
 
-</head>
+<script type="text/javascript" async="" src="//s3.buysellads.com/ac/bsa.js"></script></head>
 <body>
 	<div id="FloatDesc" style="position:absolute;display:none;z-index:100;"></div>
+
+
+<!-- BuySellAds.com Ad Code -->
+<script type="text/javascript">
+(function(){
+  var bsa = document.createElement('script');
+     bsa.type = 'text/javascript';
+     bsa.async = true;
+     bsa.src = '//s3.buysellads.com/ac/bsa.js';
+  (document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);
+})();
+</script>
+<!-- END BuySellAds.com Ad Code -->
 
 
 <script language="JavaScript">
