--- a/k/ka/kan/kangun.com.html
+++ b/k/ka/kan/kangun.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kangun.com privacy policy that was archived on 2010-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100529221604id_/http%3A//www.kangun.com/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kangun.com privacy policy that was archived on 2010-07-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100729183548id_/http%3A//www.kangun.com/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en"><head>
 		<title>Privacy Policy » Kangun  - Connect with Your Friends, Share Videos, Music, Photos.</title>	
@@ -129,6 +129,31 @@
 		</div>		
 		<div id="content_container" class="body_width_holder">				
 			<div class="inner">								
+<div class="js_ad_space_parent">
+	<div id="js_ad_space_7" class="t_center ad_space" style="padding:4px 0px 4px 0px;">
+<center>
+<script type="text/javascript"><!--
+google_ad_client = "pub-2604504347588974";
+/* 728x90, created 5/24/10 */
+google_ad_slot = "9553107117";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script><br>
+<script type="text/javascript"><!--
+google_ad_client = "pub-2604504347588974";
+/* 728x15, created 5/24/10 */
+google_ad_slot = "7004963199";
+google_ad_width = 728;
+google_ad_height = 15;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</center>	</div>
+</div>
 				<div id="js_content_container">		
 					
 
