egg2.com (archived on 2010-07-30)
{
  "alexa_rank": 382290,
  "analysis_subcorpus": true,
  "categories": "games",
  "char_count": 1712,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.4,
  "homepage_snapshot_redirected_domain": "egg2.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101007115628id_/http://www.egg2.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101007115628id_/http%3A//egg2.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "egg2.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100730050118id_/http%3A//www.egg2.com/privacy.htm",
  "policy_title": "Egg2 Free Online Games - Privacy Policy",
  "policy_url": "egg2.com/privacy.htm",
  "sha1": "f07cb4a41b9f2845e7e8d883d1dab46b2eee1af9",
  "simhash": 785556747697083158,
  "simhash_updated": false,
  "site_hostname": "egg2.com",
  "site_url": "http://egg2.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20100730050118",
  "word_count": 268,
  "year": 2010
}

--- a/e/eg/egg/egg2.com.html
+++ b/e/eg/egg/egg2.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the egg2.com privacy policy that was archived on 2010-03-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100316192602id_/http%3A//www.egg2.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the egg2.com privacy policy that was archived on 2010-07-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100730050118id_/http%3A//www.egg2.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="SHORTCUT ICON" href="http://www.egg2.com/gif_dump/favicon.ICO">
@@ -9,6 +9,9 @@
 <meta name="description" content="Games and other fun free game content.">
 <meta name="robots" content="index,follow">
 <style type="text/css">
+body {
+	background: #EEEEFF  url(../gif_dump/tables/bar-comp.gif) repeat-x ;   
+	} 
 <!-- TextRollover-1 -->
 <!--
 a:hover {text-decoration:none}
@@ -35,7 +38,7 @@ body {
 
 
 
-<body bgcolor="#EEEEFF" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<body text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <div id="Layer1" style="position:absolute; left:160px; top:0px; width:740; height:700; z-index:1"> 
 <table width="740" border="0" cellspacing="0" cellpadding="0" align="center" height="86">
 <tbody><tr>
@@ -62,7 +65,7 @@ FREE</font></i></b></h1>
 <td height="72" align="center" valign="bottom" width="15">&nbsp;</td>
 <td height="72" align="left" valign="bottom" width="195"><a href="index.html"><img src="gif_dump/tables/egg_logo_3.gif" width="194" height="72" alt="Egg2 Free Online Games" border="0"></a></td>
 <td height="72" align="center" valign="middle" width="517">
-<script language="javascript" src="gif_dump/games_gifs/random_pics.js"></script><a href="http://www.egg2.com/games/flamingo-drive.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/flamingo-drive.jpg" alt="Flamingo Drive" border="0"></a>&nbsp;&nbsp;<a href="http://www.egg2.com/games/all_out.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/all_out.gif" border="0" alt="All Out"></a>&nbsp;&nbsp;<a href="http://www.egg2.com/games/ant-buster.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/ant-buster.gif" alt="Ant Buster" border="0"></a>&nbsp;&nbsp;<a href="http://www.egg2.com/games/tetris.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/tetris.gif" border="0" alt="Tetris"></a>&nbsp;&nbsp;<a href="http://www.egg2.com/games/air%20_attack.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/air_attack.gif" border="0" alt="Air Attack"></a>&nbsp;&nbsp;<a href="http://www.egg2.com/games/animal.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/animal.gif" border="0" alt="Animal"></a>
+<script language="javascript" src="gif_dump/games_gifs/random_pics.js"></script><a href="http://www.egg2.com/games/truck-lm.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/truck-lm.gif" alt="Truck Launch Maniac" width="70" height="59" border="0"></a>&nbsp;&nbsp;<a href="http://www.egg2.com/games/racehorse.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/racehorse.gif" width="70" height="59" border="0" alt="Racehorse Tycoon"></a>&nbsp;&nbsp;<a href="http://www.egg2.com/games/dance-t-3d.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/dance-trends-3d.jpg" width="70" height="59" alt="Dance Trends 3D" border="0"></a><a href="http://www.egg2.com/games/hikkoshi.htm"></a>&nbsp;&nbsp;<a href="http://www.egg2.com/games/strategy-def-3.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/strategy-def-3.gif" width="70" height="59" alt="Strategy Defense 3" border="0"></a>&nbsp;&nbsp;<a href="http://www.egg2.com/games/fl-tron.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/fl-tron.gif" width="70" height="59" border="0" alt="FL Tron"></a>&nbsp;&nbsp;<a href="http://www.egg2.com/games/mass-attack.htm"><img src="http://www.egg2.com/gif_dump/games_gifs/mass-attack.gif" width="70" height="59" alt="Mass Attack" border="0"></a>
 </td><td height="72" align="center" valign="middle" width="13">&nbsp;</td>
 </tr>
 </tbody></table>
@@ -167,12 +170,32 @@ Group </div>
 </tr>
 </tbody></table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
+
+<div id="layer3" style="position:absolute; left:930px; top:0px; width:140px; height:900px; z-index:3;">
+<table width="140" border="0" cellpadding="0" cellspacing="0">
+<tbody><tr>
+<td width="140" height="81">&nbsp;</td>
+</tr>
+
+<tr>
+<td width="140" height="31" align="center">
+<!-- AddThis Button BEGIN -->
 <script type="text/javascript">
-_uacct = "UA-549754-1";
-urchinTracker();
+  addthis_url    = location.href;   
+  addthis_title  = document.title;  
+  addthis_pub    = 'Panfried';     
 </script>
+<script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script>
+<!-- AddThis Button END --></td>
+
+</tr>
+<tr>
+<td height="600"><div align="center">
+<iframe src="../gif_dump/games_gifs/ifrandom/1st-base.htm" width="140" height="700" frameborder="0" scrolling="no" allowtransparency="true"></iframe><br>
+</div></td>
+</tr>
+</tbody></table>
+</div>
 
 
 </body></html>
