--- a/o/ou/our/ourlads.com.html
+++ b/o/ou/our/ourlads.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ourlads.com privacy policy that was archived on 2010-05-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100531143335id_/http%3A//www.ourlads.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ourlads.com privacy policy that was archived on 2010-07-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100731043346id_/http%3A//ourlads.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	Ourlads' Privacy Policy
@@ -184,7 +184,7 @@
     <div class="ftrlogo"><img src="../images/logo_ourlads_foot.gif" alt="ourlads"><p></p>Box 235 Hiawatha, IA 52233<br><b>1-800-PRO-DRAFT</b></div>
 </div>
 <div style="padding-top:12px;" class="txtfoot">
-    <div class="discl">Copyright © 2009 Ourlads Scouting Services. All rights reserved. The NFL Draft and NFL Draft Logo are copyright of the National Football League and in no way are owned by Ourlads Scouting Services LLC. This page is intended to provide links to Ourlads' Draft coverage and is in no way affiliated with the Official NFL Draft site. For the official site please visit nfl.com </div>
+    <div class="discl">Copyright © 2010 Ourlads Scouting Services. All rights reserved. The NFL Draft and NFL Draft Logo are copyright of the National Football League and in no way are owned by Ourlads Scouting Services LLC. This page is intended to provide links to Ourlads' Draft coverage and is in no way affiliated with the Official NFL Draft site. For the official site please visit nfl.com </div>
 </div></div>
         </div>
     </form>
